# python-leanplum

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.cfg  setup.py
examples/: simple_requests.py
leanplum/: __init__.py  client.py  errors.py  http_client.py  logger.py  requestor.py  response.py
leanplum/actions/: abstract.py  admin.py  disposition.py  multi.py  users.py
