[metadata]
name = python-leanplum
version = 0.6.0
author = Tim Chen / Eric Pluntze / Sam Clements / Jesse Li
author_email = tim@sandboxx.us
description = Python 3 API wrapper for LeanPlum
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandboxxapp/python-leanplum
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

